Refactor domain entities and repository adapters for MapStruct compatibility; update mappers and service interfaces to use Optional and record types; remove unused methods; update package names and dependencies