@@ -1,13 +1,13 @@
 package com.ocoelhogabriel.manager_user_security.application.service;
 
-import com.ocoelhogabriel.manager_user_security.domain.service.PermissionService;
-import com.ocoelhogabriel.manager_user_security.domain.service.ResourceService;
 import com.ocoelhogabriel.manager_user_security.domain.entity.Permission;
 import com.ocoelhogabriel.manager_user_security.domain.entity.Resource;
 import com.ocoelhogabriel.manager_user_security.domain.entity.Role;
 import com.ocoelhogabriel.manager_user_security.domain.entity.User;
 import com.ocoelhogabriel.manager_user_security.domain.exception.ResourceNotFoundException;
 import com.ocoelhogabriel.manager_user_security.domain.repository.PermissionRepository;
+import com.ocoelhogabriel.manager_user_security.domain.service.PermissionService;
+import com.ocoelhogabriel.manager_user_security.domain.service.ResourceService;
 import com.ocoelhogabriel.manager_user_security.domain.service.UserService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of the PermissionService interface.
@@ -30,15 +29,7 @@ public class PermissionServiceImpl implements PermissionService {
     private final ResourceService resourceService;
     private final UserService userService;
 
-    /**
-     * Constructor.
-     *
-     * @param permissionRepository the permission repository
-     * @param resourceService      the resource service
-     * @param userService          the user service
-     */
-    public PermissionServiceImpl(PermissionRepository permissionRepository, ResourceService resourceService,
-            UserService userService) {
+    public PermissionServiceImpl(PermissionRepository permissionRepository, ResourceService resourceService, UserService userService) {
         this.permissionRepository = permissionRepository;
         this.resourceService = resourceService;
         this.userService = userService;
@@ -65,11 +56,9 @@ public class PermissionServiceImpl implements PermissionService {
     @Override
     @Transactional
     public Permission update(Permission permission) {
-        // Check if permission exists
         if (!permissionRepository.existsById(permission.getId())) {
             throw new ResourceNotFoundException("Permission", permission.getId());
         }
-
         return permissionRepository.save(permission);
     }
 
@@ -79,7 +68,6 @@ public class PermissionServiceImpl implements PermissionService {
         if (!permissionRepository.existsById(id)) {
             throw new ResourceNotFoundException("Permission", id);
         }
-
         permissionRepository.deleteById(id);
     }
 
@@ -92,29 +80,26 @@ public class PermissionServiceImpl implements PermissionService {
     @Override
     @Transactional(readOnly = true)
     public boolean hasPermission(Long userId, String path, String method) {
-        // Get user with roles
-        User user = userService.findByIdWithRoles(userId);
-        if (user == null) {
+        Optional<User> userOptional = userService.findByIdWithRoles(userId);
+        if (userOptional.isEmpty()) {
             logger.warn("User with ID {} not found when checking permissions", userId);
             return false;
         }
+        User user = userOptional.get();
 
-        // Get resources that match the path and method
-        List<Resource> resources = resourceService.findByPathAndMethod(path, method);
+        List<Resource> resources = resourceService.findMatchingResources(path, method);
         if (resources.isEmpty()) {
             logger.debug("No resources found for path {} and method {}", path, method);
             return false;
         }
 
-        // Extract resource IDs
-        List<Long> resourceIds = resources.stream().map(Resource::getId).collect(Collectors.toList());
+        List<Long> resourceIds = resources.stream().map(Resource::getId).toList();
+        List<Long> roleIds = user.getRoles().stream().map(Role::getId).toList();
 
-        // Extract role IDs
-        List<Long> roleIds = user.getRoles().stream().map(Role::getId).collect(Collectors.toList());
+        // Corrected Logic: Check if a permission exists for any of the user's roles against any of the matching resources.
+        boolean hasPermission = resourceIds.stream()
+                .anyMatch(resourceId -> !permissionRepository.findByRoleIdsAndResourceId(roleIds, resourceId).isEmpty());
 
-        // Check if any permission exists for any of the user's roles and any matching resource
-        boolean hasPermission = permissionRepository.findByRoleIdsAndResourceId(roleIds, resourceIds.get(0)).size() > 0;
-        
         if (hasPermission) {
             logger.debug("User {} has permission to access {} {}", userId, method, path);
         } else {
