@@ -3,31 +3,34 @@ package com.ocoelhogabriel.manager_user_security.infrastructure.persistence.adap
 import com.ocoelhogabriel.manager_user_security.domain.entity.Permission;
 import com.ocoelhogabriel.manager_user_security.domain.entity.Resource;
 import com.ocoelhogabriel.manager_user_security.domain.entity.Role;
+import com.ocoelhogabriel.manager_user_security.domain.exception.DomainException;
 import com.ocoelhogabriel.manager_user_security.domain.repository.PermissionRepository;
+import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.entity.PermissionEntity;
 import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.entity.ResourceEntity;
 import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.entity.RoleEntity;
-import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.mapper.PermissionMapper;
-import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.mapper.ResourceMapper;
-import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.mapper.RoleMapper;
 import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.repository.PermissionJpaRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.repository.ResourceJpaRepository;
+import com.ocoelhogabriel.manager_user_security.interfaces.mapper.PermissionMapper;
+import com.ocoelhogabriel.manager_user_security.interfaces.mapper.RoleMapper;
+import com.ocoelhogabriel.manager_user_security.interfaces.mapper.ResourceMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class PermissionRepositoryAdapter implements PermissionRepository {
 
     private final PermissionJpaRepository permissionJpaRepository;
+    private final ResourceJpaRepository resourceJpaRepository;
     private final PermissionMapper permissionMapper;
+    // TODO: These mappers below are pending refactoring
     private final RoleMapper roleMapper;
     private final ResourceMapper resourceMapper;
 
-    @Autowired
-    public PermissionRepositoryAdapter(PermissionJpaRepository permissionJpaRepository, PermissionMapper permissionMapper, RoleMapper roleMapper, ResourceMapper resourceMapper) {
+    public PermissionRepositoryAdapter(PermissionJpaRepository permissionJpaRepository, ResourceJpaRepository resourceJpaRepository, PermissionMapper permissionMapper, RoleMapper roleMapper, ResourceMapper resourceMapper) {
         this.permissionJpaRepository = permissionJpaRepository;
+        this.resourceJpaRepository = resourceJpaRepository;
         this.permissionMapper = permissionMapper;
         this.roleMapper = roleMapper;
         this.resourceMapper = resourceMapper;
@@ -35,8 +38,13 @@ public class PermissionRepositoryAdapter implements PermissionRepository {
 
     @Override
     public Permission save(Permission permission) {
-        var entity = permissionMapper.toEntity(permission);
-        var savedEntity = permissionJpaRepository.save(entity);
+        ResourceEntity resourceEntity = resourceJpaRepository.findByName(permission.getResource())
+                .orElseThrow(() -> new DomainException("Cannot save permission: Resource not found: " + permission.getResource()));
+
+        PermissionEntity permissionEntity = permissionMapper.toPersistenceEntity(permission);
+        permissionEntity.setResource(resourceEntity);
+
+        PermissionEntity savedEntity = permissionJpaRepository.save(permissionEntity);
         return permissionMapper.toDomain(savedEntity);
     }
 
@@ -49,12 +57,14 @@ public class PermissionRepositoryAdapter implements PermissionRepository {
     public List<Permission> findAll() {
         return permissionJpaRepository.findAll().stream()
                 .map(permissionMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public void delete(Permission entity) {
-        permissionJpaRepository.delete(permissionMapper.toEntity(entity));
+    public void delete(Permission permission) {
+        if (permission != null && permission.getId() != null) {
+            permissionJpaRepository.deleteById(permission.getId());
+        }
     }
 
     @Override
@@ -66,20 +76,20 @@ public class PermissionRepositoryAdapter implements PermissionRepository {
     public List<Permission> findByRoleId(Long roleId) {
         return permissionJpaRepository.findByRoleId(roleId).stream()
                 .map(permissionMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Permission> findByRoleIdsAndResourceId(List<Long> roleIds, Long resourceId) {
         return permissionJpaRepository.findByRoleIdInAndResourceId(roleIds, resourceId).stream()
                 .map(permissionMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public Optional<Permission> findByRoleAndResource(Role role, Resource resource) {
-        RoleEntity roleEntity = roleMapper.toEntity(role);
-        ResourceEntity resourceEntity = resourceMapper.toEntity(resource);
+        RoleEntity roleEntity = roleMapper.toPersistenceEntity(role);
+        ResourceEntity resourceEntity = resourceMapper.toPersistenceEntity(resource);
         return permissionJpaRepository.findByRoleAndResource(roleEntity, resourceEntity)
                 .map(permissionMapper::toDomain);
     }
@@ -93,7 +103,7 @@ public class PermissionRepositoryAdapter implements PermissionRepository {
     public List<Permission> findByResource(String resource) {
         return permissionJpaRepository.findByResourceName(resource).stream()
                 .map(permissionMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
