@@ -2,14 +2,12 @@ package com.ocoelhogabriel.manager_user_security.infrastructure.persistence.adap
 
 import com.ocoelhogabriel.manager_user_security.domain.entity.Plant;
 import com.ocoelhogabriel.manager_user_security.domain.repository.PlantRepository;
-import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.mapper.PlantMapper;
 import com.ocoelhogabriel.manager_user_security.infrastructure.persistence.repository.PlantJpaRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.ocoelhogabriel.manager_user_security.interfaces.mapper.PlantMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class PlantRepositoryAdapter implements PlantRepository {
@@ -17,7 +15,6 @@ public class PlantRepositoryAdapter implements PlantRepository {
     private final PlantJpaRepository plantJpaRepository;
     private final PlantMapper plantMapper;
 
-    @Autowired
     public PlantRepositoryAdapter(PlantJpaRepository plantJpaRepository, PlantMapper plantMapper) {
         this.plantJpaRepository = plantJpaRepository;
         this.plantMapper = plantMapper;
@@ -25,7 +22,7 @@ public class PlantRepositoryAdapter implements PlantRepository {
 
     @Override
     public Plant save(Plant plant) {
-        var entity = plantMapper.toEntity(plant);
+        var entity = plantMapper.toPersistenceEntity(plant);
         var savedEntity = plantJpaRepository.save(entity);
         return plantMapper.toDomain(savedEntity);
     }
@@ -39,14 +36,14 @@ public class PlantRepositoryAdapter implements PlantRepository {
     public List<Plant> findByCompanyId(Long companyId) {
         return plantJpaRepository.findByCompanyId(companyId).stream()
                 .map(plantMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Plant> findAll() {
         return plantJpaRepository.findAll().stream()
                 .map(plantMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
